--- a/test.html
+++ b/test.html
@@ -2,13 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Demo</title>
-    <link rel="stylesheet" type="text/css" href="dist/libs.css">
-    <link rel="stylesheet" type="text/css" href="dist/app.css">
-    <script src="dist/libs.js"></script>
-    <script src="dist/templates.js"></script>
-    <script src="dist/app.js"></script>
+    <meta name="viewport"
+      content="width=device-width, target-densitydpi=medium-dpi, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>mWater</title>
+    <link rel="stylesheet" type="text/css" href="dist/css/libs.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/app.css">
+    <script src="dist/js/libs.js"></script>
+    <script src="dist/js/templates.js"></script>
 </head>
 <body>
+    <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
+    <script src="dist/js/app.js"></script>
 </body>
 </html>
