--- a/forms/forms.html
+++ b/forms/forms.html
@@ -17,9 +17,25 @@
     <script>
         $(function() {
             _.each(forms, function(form) {
-                console.log(form.name);
+                $('#formlist').append($('<div><button type="button" class="btn formbutton" id="'+form._id+'">'+form.name+'</button></div>'));
+            });
+
+            $(".formbutton").on('click', function(ev) {
+                form = _.findWhere(forms, {_id: ev.currentTarget.id});
+                //console.log(form);
+                viewFunc = new Function("options", form.view);
+                view = viewFunc({ ctx: {} });
+                $("#form").html("");
+                $("#form").append(view.el);
+                view.on('finish', function() {
+                    alert("finish");
+                });
             });
         });
     </script>
+    <div id="formlist">
+    </div>
+    <div id="form">
+    </div>
 </body>
 </html>
