--- a/forms/forms.html
+++ b/forms/forms.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
     <script src="../dist/js/app.js"></script>
-    <script src="forms.js"></script>
+    <script src="../dist/js/forms.js"></script>
     <script>
         $(function() {
             _.each(forms, function(form) {
