Major refactor. All tests not running.

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -15,7 +15,7 @@
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
     <script src="js/app.js"></script>
     <script>
-        require("run");
+        require("run").start();
     </script>
 </body>
 </html>
