--- a/app/cordova/debug/index_cordova.html
+++ b/app/cordova/debug/index_cordova.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="manifest.appcache">
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport"
@@ -10,13 +10,12 @@
     <script src="js/libs.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/seeds.js"></script>
-    <script src="http://weinre.mwater.co/client/#anonymous"></script>
 </head>
 <body>
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
     <script src="js/app.js"></script>
     <script>
-        require("run").start();
+        require("run").start({update: false});
     </script>
 </body>
 </html>
