--- a/app/cordova/release/index_cordova.html
+++ b/app/cordova/release/index_cordova.html
@@ -15,7 +15,7 @@
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
     <script src="js/app.js"></script>
     <script>
-        require("run").start({update: false});
+        require("run").start();
     </script>
 </body>
 </html>
