--- a/app/cordova/debug/index_cordova.html
+++ b/app/cordova/debug/index_cordova.html
@@ -15,6 +15,7 @@
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
     <script src="js/app.js"></script>
     <script>
+        console.log("Running debug version of index_cordova");
         require("run").start({update: false});
     </script>
 </body>
