--- a/app/html/index_map.html
+++ b/app/html/index_map.html
@@ -12,6 +12,9 @@
     <script src="js/seeds.js"></script>
 </head>
 <body>
+    <!--[if lt IE 8]>
+    <script>alert("Warning: Internet Explorer 8 and below not supported. mWater may not function correctly.");</script>
+    <![endif]-->
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
     <script src="js/app.js"></script>
     <script>
