--- a/app/html/index_map.html
+++ b/app/html/index_map.html
@@ -7,6 +7,7 @@
     <title>mWater</title>
     <link rel="stylesheet" type="text/css" href="css/libs.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
+    <script src="js/preload.js"></script>
     <script src="js/libs.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/seeds.js"></script>
