--- a/app/html/index_demo.html
+++ b/app/html/index_demo.html
@@ -13,8 +13,11 @@
     <script src="js/seeds.js"></script>
 </head>
 <body>
-    <!--[if lt IE 8]>
+    <!--[if lt IE 9]>
     <script>alert("Warning: Internet Explorer 8 and below not supported. mWater may not function correctly.");</script>
+    <![endif]-->
+    <!--[if IE 9]>
+    <script>alert("Warning: Internet Explorer 9 not supported. mWater may not function correctly.");</script>
     <![endif]-->
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
     <script src="js/app.js"></script>
