Added timestamps to js load to prevent caching

--- a/app/html/index_cordova.html
+++ b/app/html/index_cordova.html
@@ -5,16 +5,16 @@
     <meta name="viewport"
       content="width=device-width, target-densitydpi=medium-dpi, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>mWater</title>
-    <link rel="stylesheet" type="text/css" href="css/libs.css">
-    <link rel="stylesheet" type="text/css" href="css/app.css">
-    <script src="js/preload.js"></script>
-    <script src="js/libs.js"></script>
-    <script src="js/templates.js"></script>
-    <script src="js/seeds.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/libs.css?_=timestamp">
+    <link rel="stylesheet" type="text/css" href="css/app.css?_=timestamp">
+    <script src="js/preload.js?_=timestamp"></script>
+    <script src="js/libs.js?_=timestamp"></script>
+    <script src="js/templates.js?_=timestamp"></script>
+    <script src="js/seeds.js?_=timestamp"></script>
 </head>
 <body>
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
-    <script src="js/app.js"></script>
+    <script src="js/app.js?_=timestamp"></script>
     <script>
         require("run").start();
     </script>
