--- a/app/html/index_cordova.html
+++ b/app/html/index_cordova.html
@@ -7,6 +7,7 @@
     <title>mWater</title>
     <link rel="stylesheet" type="text/css" href="css/libs.css?_=timestamp">
     <link rel="stylesheet" type="text/css" href="css/app.css?_=timestamp">
+    <script src="file:///android_asset/www/cordova.js"></script>
     <script src="js/preload.js?_=timestamp"></script>
     <script src="js/libs.js?_=timestamp"></script>
     <script src="js/seeds.js?_=timestamp"></script>
@@ -15,7 +16,7 @@
     <!-- Must be run before body is entirely loaded to prevent browser quirks in mobile -->
     <script src="js/app.js?_=timestamp"></script>
     <script>
-        require("run").start();
+        require("run").start({cordova:true});
     </script>
 </body>
 </html>
