first version of searching the map

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -10,6 +10,12 @@
     <script src="js/preload.js"></script>
     <script src="js/libs.js"></script>
     <script src="js/seeds.js"></script>
+    <!-- Esri Leaflet Core -->
+    <script src="http://cdn-geoweb.s3.amazonaws.com/esri-leaflet/0.0.1-beta.5/esri-leaflet-core.js"></script>
+
+    <!-- Esri Leaflet Geocoder -->
+    <script src="http://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.3/esri-leaflet-geocoder.js"></script>
+    <link rel="stylesheet" type="text/css" href="http://cdn-geoweb.s3.amazonaws.com/esri-leaflet-geocoder/0.0.1-beta.3/esri-leaflet-geocoder.css">
 </head>
 <body>
     <!--[if lt IE 9]>
