--- a/app/html/index.html
+++ b/app/html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport"
       content="width=device-width, target-densitydpi=medium-dpi, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>mWater</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/libs.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <script src="js/preload.js"></script>
